re-implemented bidsification

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,11 +124,8 @@ Documentation = "https://github.com/hyruuk/saflow/blob/main/README.md"
 "Bug Tracker" = "https://github.com/hyruuk/saflow/issues"
 
 [tool.setuptools]
-packages = ["saflow", "code"]
+packages = ["code"]
 include-package-data = true
-
-[tool.setuptools.package-data]
-saflow = ["py.typed"]
 
 # ============================================================================
 # Ruff Configuration
