--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "mne>=1.5.0,<2.0.0",
     "mne-bids>=0.13.0,<1.0.0",
     "autoreject>=0.4.0,<1.0.0",
+    "nibabel>=5.0.0,<6.0.0",  # For reading FreeSurfer surfaces
 
     # Scientific computing
     "numpy>=1.22.0,<2.0.0",  # 1.22+ for pandas 2.0 compatibility
