--- a/config.yaml.template
+++ b/config.yaml.template
@@ -331,6 +331,11 @@ computing:
       mem: 64G
       time: "2:00:00"
 
+    atlas:
+      cpus: 1
+      mem: 96G
+      time: "0:30:00"
+
     features:
       cpus: 12
       mem: 32G
